--- a/lessons/lesson02/todo-mvc-js/css/style.css
+++ b/lessons/lesson02/todo-mvc-js/css/style.css
@@ -104,7 +104,7 @@ input[type="checkbox"] {
 	font-smoothing: antialiased;
 }
 
-.new-todo {
+.new-todo, .todo-count {
 	padding: 16px 16px 16px 60px;
 	border: none;
 	background: rgba(0, 0, 0, 0.003);
